# discourse-cli

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
commands/: index.html
commands/admin/: index.html
commands/api/: index.html
commands/backups/: index.html
commands/badges/: index.html
commands/categories/: index.html
commands/config/: index.html
commands/groups/: index.html
commands/invites/: index.html
commands/messages/: index.html
commands/notifications/: index.html
commands/posts/: index.html
commands/search/: index.html
commands/site/: index.html
commands/tags/: index.html
commands/topics/: index.html
commands/uploads/: index.html
commands/users/: index.html
configuration/: index.html
docs/: configuration.md  index.md  installation.md  output-formats.md
docs/commands/: admin.md  api.md  backups.md  badges.md  categories.md  config.md  groups.md  index.md  invites.md  messages.md  notifications.md  posts.md  search.md  site.md  tags.md  topics.md  uploads.md  users.md
installation/: index.html
output-formats/: index.html
scripts/: generate_client.py
search/: search_index.json
src/discourse_cli/: __init__.py  exceptions.py
src/discourse_cli/api/: __init__.py  admin.py  backups.py  badges.py  categories.py  client.py  events.py  groups.py  invites.py  notifications.py  posts.py  private_messages.py  search.py  site.py  tags.py  topics.py  uploads.py  users.py
src/discourse_cli/cli/: __init__.py  main.py  options.py
src/discourse_cli/cli/commands/: admin.py  api.py  backups.py  badges.py  categories.py  config_cmd.py  groups.py  invites.py  messages.py  notifications.py  posts.py  search.py  site.py  tags.py  topics.py  uploads.py  users.py
src/discourse_cli/config/: __init__.py  loader.py  models.py
src/discourse_cli/formatters/: __init__.py  json_fmt.py  table_fmt.py
tests/: conftest.py  test_client.py  test_config.py
tests/test_cli/: test_admin.py  test_users.py
