[project]
name = "discourse-cli"
version = "0.1.0"
description = "CLI tool for Discourse forum administration via REST API"
readme = "README.md"
license = "WTFPL"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
    "pydantic>=2.0",
]

[project.scripts]
discourse = "discourse_cli.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discourse_cli"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
