[project]
name = "discourse-cli"
version = "0.1.0"
description = "CLI tool for Discourse forum administration via REST API"
readme = "README.md"
license = "WTFPL"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
    "pydantic>=2.0",
]

[project.scripts]
discourse = "discourse_cli.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discourse_cli"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/discourse_cli/api/__init__.py" = ["E501"]
"src/discourse_cli/api/admin.py" = ["E501"]
"src/discourse_cli/api/backups.py" = ["E501"]
"src/discourse_cli/api/badges.py" = ["E501"]
"src/discourse_cli/api/categories.py" = ["E501"]
"src/discourse_cli/api/events.py" = ["E501"]
"src/discourse_cli/api/groups.py" = ["E501"]
"src/discourse_cli/api/invites.py" = ["E501"]
"src/discourse_cli/api/notifications.py" = ["E501"]
"src/discourse_cli/api/posts.py" = ["E501"]
"src/discourse_cli/api/private_messages.py" = ["E501"]
"src/discourse_cli/api/search.py" = ["E501"]
"src/discourse_cli/api/site.py" = ["E501"]
"src/discourse_cli/api/tags.py" = ["E501"]
"src/discourse_cli/api/topics.py" = ["E501"]
"src/discourse_cli/api/uploads.py" = ["E501"]
"src/discourse_cli/api/users.py" = ["E501"]
"src/discourse_cli/api/client.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
